# fastapi-jsonrpc-template

./: .gitignore  Makefile  README.md  client_example.py  pyproject.toml
app/: main.py
app/core/: config.py  logging.py
app/rpc/: registry.py  schema.py  transport.py
app/rpc/methods/: __init__.py  health.py  math.py
tests/: conftest.py  test_rpc_basic.py
