[project]
name = "fastapi-jsonrpc"
version = "0.1.0"
description = "FastAPI JSON-RPC 2.0 service"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "python-json-logger>=2.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.10", "types-requests"]

[tool.ruff]
line-length = 100
